# jwt-auth-vike-fastapi

./: LICENSE  README.md
auth-api/: pyproject.toml
auth-app/: README.md  package.json  tsconfig.json  vite.config.ts
auth-app/layouts/: LayoutDefault.tsx
auth-app/pages/: +config.ts
